--- a/app/components/Sidebar/sidebar.css
+++ b/app/components/Sidebar/sidebar.css
@@ -68,6 +68,7 @@
 @media all and (max-width: 38em) {
   .sidebar {
     box-shadow: 1px 1px 12px -2px rgba(0,0,0,0.62);
+    z-index: 2;
   }
   .heading {
     border: none;
