--- a/app/components/Plans/planCreator.css
+++ b/app/components/Plans/planCreator.css
@@ -1,18 +1,19 @@
 .wrapper {
   margin: 4em 1em;
+  lost-utility: clearfix;
 }
 
 .formBox {
-  lost-column: 1/3;
+  lost-column: 1/2;
 }
 
-@media all and (max-width: 55em) {
+@media all and (max-width: 60em) {
   .formBox {
     lost-waffle: 1/2;
   }
 }
 
-@media all and (max-width: 31em) {
+@media all and (max-width: 35em) {
   .formBox {
     lost-waffle: 1;
   }
