--- a/app/components/Plans/singlePlan.css
+++ b/app/components/Plans/singlePlan.css
@@ -1,20 +1,23 @@
 .wrapper {
   margin: 4em 1em;
+}
+
+.grid {
   lost-utility: clearfix;
 }
 
-.otherFields {
+.column {
   lost-waffle: 2/3;
 }
 
 @media all and (max-width: 60em) {
-  .otherFields {
+  .column {
     lost-waffle: 1/2;
   }
 }
 
-@media all and (max-width: 40em) {
-  .otherFields {
+@media all and (max-width: 35em) {
+  .column {
     lost-waffle: 1;
   }
 }
