--- a/app/routes/dashboard.css
+++ b/app/routes/dashboard.css
@@ -6,3 +6,23 @@
   padding-bottom: .4em;
   border-bottom: 1px solid #ddd;
 }
+
+.subtitle {
+  margin-bottom: .2em;
+  color: #aaa;
+}
+
+.grid {
+  lost-utility: clearfix;
+  margin-bottom: 1em;
+}
+
+.halfColumn {
+  lost-waffle: 1/2;
+}
+
+@media all and (max-width: 35em) {
+  .halfColumn {
+    lost-waffle: 1;
+  }
+}
