--- a/app/routes/Users/profile.css
+++ b/app/routes/Users/profile.css
@@ -3,11 +3,15 @@
   margin-bottom: 1em;
 }
 
+.imageList {
+  margin-right: .5em;
+}
+
 .column {
   lost-waffle: 1/3;
 }
 
-@media all and (max-width: 60em) {
+@media all and (max-width: 70em) {
   .column {
     lost-waffle: 1/2;
   }
@@ -17,8 +21,4 @@
   .column {
     lost-waffle: 1;
   }
-}
-
-.link a{
-  text-decoration: none;
 }
