--- a/app/components/Header/Nav.css
+++ b/app/components/Header/Nav.css
@@ -6,6 +6,7 @@
   width: 100%;
   white-space: nowrap;
   position: fixed;
+  z-index: 3;
   top:0;
   box-shadow: 1px 1px 12px -2px rgba(0,0,0,0.62);
 }
