--- a/app/components/Header/Nav.css
+++ b/app/components/Header/Nav.css
@@ -4,48 +4,67 @@
   height: 3.3em;
   color: #fff;
   width: 100%;
+  padding: 0 .8em;
   position: fixed;
   z-index: 1;
   top:0;
   box-shadow: 1px 1px 12px -2px rgba(0,0,0,0.62);
-  lost-utility: clearfix;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  font-size: .9em;
 }
 
-.navbarList {
-  float:left;
-  margin:0;
-  max-height: 100%;
-  margin-top: .65em;
+.left {
+  align-self: flex-start;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  margin-top: .5em;
 }
 
-.navbarListRight {
-  composes: navbarList;
-  float:right;
-  margin-top: .55em;
+.right {
+  align-self: flex-end;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  margin-top: .7em;
 }
 
 .item {
-  margin-top:.2em;
-  display: inline-block;
+  margin-top:.3em;
+  margin-left:.3em;
 }
 
-.navbarList .item {
-  float: left;
-}
 
-.navbarListRight .item {
-  float: right;
+.icon {
+  composes: item;
+  margin-top: .1em;
 }
 
 .itemHiddenOnSmall {
   composes: item
 }
 
+@media all and (max-width: 38em) {
+  .itemHiddenOnSmall {
+    composes: item;
+    display: none;
+  }
+}
+
+@media all and (max-width: 38em) {
+  .iconHiddenOnSmall {
+    composes: icon;
+    display: none;
+  }
+}
+
 .link {
   color: #fff;
   text-decoration: none;
-  padding: 0em .8em;
-  vertical-align: middle;
 }
 
 .active,
@@ -65,6 +84,7 @@
   right: .3em;
   top: 3.3em;
   width: 7em;
+  padding-left: .4em;
   box-shadow: 1px 1px 12px -2px rgba(0,0,0,0.62);
 }
 
@@ -74,26 +94,8 @@
 
 .avatar {
   border-radius: 50%;
-  margin: -.25em .5em 0em .3em;
+  margin: -.45em .5em 0em .3em;
   padding: 0;
   height: 2.45em;
   width: 2.45em;
-}
-
-@media all and (max-width: 38em) {
-  .itemHiddenOnSmall, .menu {
-    display: none;
-  }
-}
-
-.icon {
-  composes: item;
-  margin: 0;
-}
-
-@media all and (max-width: 38em) {
-  .iconHiddenOnSmall {
-    composes: icon;
-    display: none;
-  }
 }
