Upgraded nav and sidebar

--- a/app/components/Sidebar/sidebar.css
+++ b/app/components/Sidebar/sidebar.css
@@ -6,9 +6,8 @@
   white-space: nowrap;
   position: fixed;
   width: 12em;
-  z-index: 3;
-  display: block;
-  top: 0;
+  box-shadow: 1px 1px 12px -2px rgba(0,0,0,0.62);
+  z-index: 2;
 }
 
 .sidebarList {
@@ -54,24 +53,19 @@
   font-size: 1em;
   padding-top: .6em;
   padding-bottom: .6em;
-  border-right: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
   margin-bottom: 1em;
   cursor: pointer;
 }
 
-.active > .heading,
+.active,
 .heading:hover,
 .heading:focus {
-  color: #fff;
+  color: #BBDEFB;
 }
 
-@media all and (max-width: 38em) {
-  .sidebar {
-    box-shadow: 1px 1px 12px -2px rgba(0,0,0,0.62);
-    z-index: 2;
-  }
-  .heading {
-    border: none;
-  }
+.close {
+  position: absolute;
+  top: .6em;
+  right: .3em;
+  cursor: pointer;
 }
