--- a/app/routes/app.css
+++ b/app/routes/app.css
@@ -1,9 +1,3 @@
-@media all and (min-width: 35em) {
-  .sidebarShowing {
-    margin-left: 12em;
-  }
-}
-
-.app {
-  margin-top: 2.95em;
+.darken {
+  background: rgba(0, 0, 0, 0.3);
 }
