--- a/app/components/Plans/planList.css
+++ b/app/components/Plans/planList.css
@@ -1,14 +1,9 @@
-.wrapper {
-  margin: 4em 1em;
-}
-
 .btn {
   background-color: #03A9F4;
   color: #fff;
   padding: .7em;
   margin-top: .2em;
   margin-bottom: 1em;
-  float:right;
 }
 
 @media all and (max-width: 38em) {
@@ -22,12 +17,21 @@
 }
 
 .container {
-  height: 100%;
   lost-utility: clearfix;
 }
 
+.column {
+  lost-waffle: 1/3;
+}
 
-.title {
-  margin-bottom: .2em;
-  float:left;
+@media all and (max-width: 60em) {
+  .column {
+    lost-waffle: 1/2;
+  }
+}
+
+@media all and (max-width: 35em) {
+  .column {
+    lost-waffle: 1;
+  }
 }
