--- a/app/components/Sidebar/sidebar.css
+++ b/app/components/Sidebar/sidebar.css
@@ -8,6 +8,16 @@
   width: 12em;
   box-shadow: 1px 1px 12px -2px rgba(0,0,0,0.62);
   z-index: 2;
+  animation: sk-scaleout .5s 1 ease-in-out;
+}
+
+
+@keyframes sk-scaleout {
+  0% {
+    transform: translate(-100%);
+  } 100% {
+    transform: translate(0);
+  }
 }
 
 .sidebarList {
