--- a/app/components/Utils/spinner.css
+++ b/app/components/Utils/spinner.css
@@ -1,29 +1,20 @@
 .spinner {
-  width: 40px;
-  height: 40px;
+  display: inline-flex;
+  width: 50px;
+  height: 50px;
   margin: 1em 2em;
   background-color: #333;
-
   border-radius: 100%;
-  -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
-  animation: sk-scaleout 1.0s infinite ease-in-out;
-}
-
-@-webkit-keyframes sk-scaleout {
-  0% { -webkit-transform: scale(0) }
-  100% {
-    -webkit-transform: scale(1.0);
-    opacity: 0;
-  }
+  animation: sk-scaleout 2.0s infinite ease-in-out;
+  animation-direction: alternate;
 }
 
 @keyframes sk-scaleout {
-  0% {
-    -webkit-transform: scale(0);
-    transform: scale(0);
-  } 100% {
-    -webkit-transform: scale(1.0);
+  0%, 100% {
+    transform: scale(.2);
+    opacity: .8;
+  } 50% {
     transform: scale(1.0);
-    opacity: 0;
+    opacity: .5;
   }
 }
