--- a/app/components/Users/authForms.css
+++ b/app/components/Users/authForms.css
@@ -6,9 +6,21 @@
   width: 100%;
 }
 
+.btnShake {
+  composes: btn;
+  animation: shake .5s 1 ease-in-out;
+}
+
+@keyframes shake {
+    0%, 100% {transform: translateX(0);}
+    25%, 50%, 75% {transform: translateX(-10px);}
+    50% {transform: translateX(10px);}
+}
+
+
 .wrapper {
   lost-center: 400px;
-  padding: 1em;
+  padding: 4em 1em;
 }
 
 .title {
