Got sidebar working well

--- a/app/routes/app.css
+++ b/app/routes/app.css
@@ -1,3 +1,29 @@
 .darken {
-  background: rgba(0, 0, 0, 0.3);
+
+  animation: an-open .5s 1;
+  animation-fill-mode: both;
+}
+
+.lighten {
+  animation: an-close .5s 1;
+  animation-fill-mode: both;
+}
+
+@keyframes an-open {
+  0% {
+
+    opacity: 1;
+  } 100% {
+    opacity: 0.5;
+    background-color: #000;
+  }
+}
+
+@keyframes an-close {
+  0% {
+    background-color: #000;
+    opacity: 0.5;
+  } 100% {
+    opacity: 1;
+  }
 }
