--- a/app/components/Plans/singlePlan.css
+++ b/app/components/Plans/singlePlan.css
@@ -1,19 +1,10 @@
-.wrapper {
-  margin: 4em 1em;
-}
-
 .grid {
   lost-utility: clearfix;
+  max-width: 960px;
 }
 
 .column {
-  lost-waffle: 2/3;
-}
-
-@media all and (max-width: 60em) {
-  .column {
-    lost-waffle: 1/2;
-  }
+  lost-waffle: 1/2;
 }
 
 @media all and (max-width: 35em) {
@@ -24,6 +15,7 @@
 
 .listGroup {
   margin-bottom: 2em;
+  margin-left: 0;
   list-style: none;
 }
 
