Got features on plans working a bit

--- a/app/routes/Plans/create.css
+++ b/app/routes/Plans/create.css
@@ -19,7 +19,14 @@
   }
 }
 
+.btnFeatures {
+  composes: button from '../../styles/buttons.css';
+  margin: .4em 0em;
+  width: 100%;
+}
+
 .btn {
+  composes: button from '../../styles/buttons.css';
   background-color: #03A9F4;
   color: #fff;
   padding: .8em;
