--- a/app/styles/buttons.css
+++ b/app/styles/buttons.css
@@ -1,4 +1,4 @@
-button {
+.button {
   /* Structure */
   display: inline-block;
   zoom: 1;
@@ -28,13 +28,13 @@ button {
 }
 
 /* Firefox: Get rid of the inner focus border */
-button::-moz-focus-inner {
+.button::-moz-focus-inner {
   padding: 0;
   border: 0;
 }
 
-button:hover,
-button:focus {
+.button:hover,
+.button:focus {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#1a000000',GradientType=0);
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), color-stop(40%, rgba(0,0,0, 0.05)), to(rgba(0,0,0, 0.10)));
     background-image: -webkit-linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
@@ -42,27 +42,11 @@ button:focus {
     background-image: -o-linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
     background-image: linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
 }
-button:focus {
+.button:focus {
     outline: 0;
 }
-button-active,
-button:active {
+
+.button:active {
     box-shadow: 0 0 0 1px rgba(0,0,0, 0.15) inset, 0 0 6px rgba(0,0,0, 0.20) inset;
     border-color: #000\9;
-}
-
-button[disabled],
-button-disabled,
-button-disabled:hover,
-button-disabled:focus,
-button-disabled:active {
-    border: none;
-    background-image: none;
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-    filter: alpha(opacity=40);
-    -khtml-opacity: 0.40;
-    -moz-opacity: 0.40;
-    opacity: 0.40;
-    cursor: not-allowed;
-    box-shadow: none;
 }
