--- a/app/components/Users/authForms.css
+++ b/app/components/Users/authForms.css
@@ -1,4 +1,5 @@
 .btn {
+  composes: button from '../../styles/buttons.css';
   background-color: #03A9F4;
   color: #fff;
   padding: .8em;
@@ -7,7 +8,12 @@
 }
 
 .btnShake {
-  composes: btn;
+  composes: button from '../../styles/buttons.css';
+  background-color: #03A9F4;
+  color: #fff;
+  padding: .8em;
+  margin-top: .2em;
+  width: 100%;
   animation: shake .5s 1 ease-in-out;
 }
 
