--- a/app/components/Users/userItem.css
+++ b/app/components/Users/userItem.css
@@ -1,6 +1,20 @@
 .wrapper {
   max-width: 100%;
   height: 5em;
+  cursor: pointer;
+}
+
+.shadow {
+  overflow: hidden;
+  padding: 0em .7em;
+  border: 1px solid #ddd;
+  margin: -.85em 0em;
+}
+
+@media all and (max-width: 40em) {
+  .shadow {
+    margin: -.85em -1em;
+  }
 }
 
 .avatar {
@@ -9,12 +23,12 @@
   height: 3em;
   width: 3em;
   display: inline-block;
-   vertical-align: middle;
+  vertical-align: middle;
 }
 
 .info {
   display: inline-block;
- vertical-align: middle;
+  vertical-align: middle;
 }
 
 .name {
