--- a/app/components/Sidebar/sidebar.css
+++ b/app/components/Sidebar/sidebar.css
@@ -8,7 +8,7 @@
   box-shadow: 1px 1px 12px -2px rgba(0,0,0,0.62);
   z-index: 2;
   animation: an-open .5s 1;
-  animation-fill-mode: both;
+  animation-fill-mode: forwards;
 }
 
 .sidebarClose {
@@ -20,7 +20,7 @@
   box-shadow: 1px 1px 12px -2px rgba(0,0,0,0.62);
   z-index: 2;
   animation: an-close .5s 1;
-  animation-fill-mode: both;
+  animation-fill-mode: forwards;
 }
 
 @keyframes an-open {
