--- a/app/routes/Plans/create.css
+++ b/app/routes/Plans/create.css
@@ -34,6 +34,22 @@
   width: 100%;
 }
 
+.btnShake {
+  composes: button from '../../styles/buttons.css';
+  background-color: #03A9F4;
+  color: #fff;
+  padding: .8em;
+  margin-top: .2em;
+  width: 100%;
+  animation: shake .5s 1 ease-in-out;
+}
+
+@keyframes shake {
+    0%, 100% {transform: translateX(0);}
+    25%, 50%, 75% {transform: translateX(-10px);}
+    50% {transform: translateX(10px);}
+}
+
 .addFeature {
   margin: .5em 0;
 }
@@ -52,4 +68,12 @@
 
 .fieldset {
   text-align: left;
+}
+
+.error {
+  color: red;
+}
+
+.success {
+  color: green;
 }
