--- a/app/components/Utils/spinner.css
+++ b/app/components/Utils/spinner.css
@@ -1,8 +1,8 @@
 .spinner {
-  display: inline-flex;
+  margin-left: calc(50% - 25px);
+  margin-top: 20px;
   width: 50px;
   height: 50px;
-  margin: 1em 2em;
   background-color: #333;
   border-radius: 100%;
   animation: sk-scaleout 2.0s infinite ease-in-out;
