--- a/app/components/Utils/imageUpload.css
+++ b/app/components/Utils/imageUpload.css
@@ -1,16 +1,24 @@
 .button {
   composes: button from '../../styles/buttons.css';
   margin-bottom: 3em;
+  padding: 0;
+  width: 100%;
 }
 
 .upload {
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin: 0;
-  padding: 0;
-  font-size: 20px;
+  width: 100%;
+  height: 100%;
   cursor: pointer;
   opacity: 0;
+  padding: 0 0em .5em 1em;
   filter: alpha(opacity=0);
+}
+
+.btnText {
+  position: absolute;
+}
+
+.container {
+  padding-top: .5em;
+  margin-left: -8.5em;
 }
