--- a/app/components/Utils/imageUpload.css
+++ b/app/components/Utils/imageUpload.css
@@ -3,6 +3,8 @@
   margin-bottom: 3em;
   padding: 0;
   width: 100%;
+  background-color: #03A9F4;
+  color: #fff;
 }
 
 .upload {
@@ -10,15 +12,15 @@
   height: 100%;
   cursor: pointer;
   opacity: 0;
-  padding: 0 0em .5em 1em;
+  padding: .8em 0em .8em 1em;
   filter: alpha(opacity=0);
 }
 
 .btnText {
   position: absolute;
+  margin-top:.9em;
 }
 
 .container {
-  padding-top: .5em;
   margin-left: -8.5em;
 }
