--- a/app/routes/Plans/view.css
+++ b/app/routes/Plans/view.css
@@ -32,3 +32,21 @@
   padding-bottom: .4em;
   border-bottom: 1px solid #ddd;
 }
+
+.btn {
+  composes: button from '../../styles/buttons.css';
+  background-color: #03A9F4;
+  color: #fff;
+  padding: .7em;
+  margin-top: .2em;
+  margin-bottom: 1em;
+}
+
+@media all and (max-width: 40em) {
+  .btn {
+    background-color: #03A9F4;
+    color: #fff;
+    padding: .4em;
+    margin-bottom: 1em;
+  }
+}
