--- a/app/components/Plans/editPlan.css
+++ b/app/components/Plans/editPlan.css
@@ -1,10 +1,18 @@
+.title {
+  composes: title from '../../styles/utilities.css';
+}
+
+.wrapper {
+  composes: wrapper from '../../styles/utilities.css';
+}
+
 .grid {
   lost-utility: clearfix;
   max-width: 960px;
 }
 
 .column {
-  lost-column: 1/2;
+  lost-waffle: 1/2;
 }
 
 @media all and (max-width: 40em) {
@@ -20,28 +28,13 @@
 }
 
 .btn {
-  composes: button from '../../styles/buttons.css';
-  background-color: #03A9F4;
-  color: #fff;
-  padding: .8em;
-  margin-top: .2em;
+  composes: buttonPrimary from '../../styles/buttons.css';
   width: 100%;
 }
 
 .btnShake {
-  composes: button from '../../styles/buttons.css';
-  background-color: #03A9F4;
-  color: #fff;
-  padding: .8em;
-  margin-top: .2em;
+  composes: buttonShakePrimary from '../../styles/buttons.css';
   width: 100%;
-  animation: shake .5s 1 ease-in-out;
-}
-
-@keyframes shake {
-    0%, 100% {transform: translateX(0);}
-    25%, 50%, 75% {transform: translateX(-10px);}
-    50% {transform: translateX(10px);}
 }
 
 .addFeature {
