--- a/app/components/Plans/planForms.css
+++ b/app/components/Plans/planForms.css
@@ -1,26 +1,13 @@
 .btn {
   composes: button from '../../styles/buttons.css';
-  background-color: #03A9F4;
-  color: #fff;
-  padding: .8em;
   margin-top: .8em;
   width: 100%;
 }
 
 .btnShake {
-  composes: button from '../../styles/buttons.css';
-  background-color: #03A9F4;
-  color: #fff;
-  padding: .8em;
+  composes: buttonShake from '../../styles/buttons.css';
   margin-top: .8em;
   width: 100%;
-  animation: shake .5s 1 ease-in-out;
-}
-
-@keyframes shake {
-    0%, 100% {transform: translateX(0);}
-    25%, 50%, 75% {transform: translateX(-10px);}
-    50% {transform: translateX(10px);}
 }
 
 .form input, .form label{
