--- a/app/components/Teams/teamCard.css
+++ b/app/components/Teams/teamCard.css
@@ -1,5 +1,5 @@
 .container {
-  box-shadow: 1px 1px 12px -2px rgba(0,0,0,0.62);
+  composes: cardShadow from '../../styles/utilities.css';
   padding: 1em;
 }
 
