--- a/app/components/Users/SocialAuth.css
+++ b/app/components/Users/SocialAuth.css
@@ -1,8 +1,5 @@
 .btn {
-  composes: button from '../../styles/buttons.css';
-  background-color: #03A9F4;
-  color: #fff;
-  padding: .8em;
+  composes: buttonPrimary from '../../styles/buttons.css';
   margin-top: .2em;
   width: 100%;
 }
