--- a/app/components/Users/editProfile.css
+++ b/app/components/Users/editProfile.css
@@ -4,7 +4,6 @@
   margin-bottom: 1em;
 }
 
-
 .column {
   lost-waffle: 1/2;
 }
@@ -29,4 +28,16 @@
 
 .success {
   color: green;
+}
+
+.title {
+  composes: title from '../../styles/utilities.css';
+}
+
+.subtitle {
+  composes: subtitle from '../../styles/utilities.css';
+}
+
+.wrapper {
+  composes: wrapper from '../../styles/utilities.css';
 }
