--- a/app/routes/Users/profile.css
+++ b/app/routes/Users/profile.css
@@ -21,3 +21,15 @@
   margin-bottom: 3em;
   width: 100%;
 }
+
+.title {
+  composes: title from '../../styles/utilities.css';
+}
+
+.subtitle {
+  composes: subtitle from '../../styles/utilities.css';
+}
+
+.wrapper {
+  composes: wrapper from '../../styles/utilities.css';
+}
