--- a/app/routes/Plans/list.css
+++ b/app/routes/Plans/list.css
@@ -9,20 +9,19 @@
 }
 
 .column {
-  lost-waffle: 1/3;
-  cursor:pointer;
+  lost-waffle: 1/2;
 }
 
-@media all and (max-width: 60em) {
-  .column {
-    lost-waffle: 1/2;
-  }
-}
 
-@media all and (max-width: 35em) {
+@media all and (max-width: 40em) {
   .column {
     lost-waffle: 1;
   }
+}
+
+.columnCard {
+  composes: column;
+  cursor: pointer;
 }
 
 .title {
