--- a/app/routes/Todos/list.css
+++ b/app/routes/Todos/list.css
@@ -9,27 +9,28 @@
 }
 
 .column {
-  lost-waffle: 1/3;
-  cursor:pointer;
+  lost-waffle: 1/2;
 }
 
-@media all and (max-width: 60em) {
-  .column {
-    lost-waffle: 1/2;
-  }
-}
-
-@media all and (max-width: 35em) {
+@media all and (max-width: 40em) {
   .column {
     lost-waffle: 1;
   }
+}
+
+.cardColumn {
+  composes: column;
+  cursor:pointer;
 }
 
 .title {
   composes: title from '../../styles/utilities.css';
 }
 
+.subtitle {
+  composes: subtitle from '../../styles/utilities.css';
+}
+
 .wrapper {
   composes: wrapper from '../../styles/utilities.css';
-  max-width: 400px;
 }
