--- a/app/routes/Users/profile.css
+++ b/app/routes/Users/profile.css
@@ -21,6 +21,11 @@
   width: 100%;
 }
 
+.btnTodos {
+  composes: button from '../../styles/buttons.css';
+  margin-top: 1em;
+}
+
 .title {
   composes: title from '../../styles/utilities.css';
 }
@@ -29,9 +34,9 @@
   composes: subtitle from '../../styles/utilities.css';
 }
 
-.profileSubtitle {
+.marginTopSubtitle {
   composes: subtitle from '../../styles/utilities.css';
-  margin-top: 3em;
+  margin-top: 1.6em;
 }
 
 .wrapper {
