Make todos not error if user not logged in

--- a/app/routes/Teams/view.css
+++ b/app/routes/Teams/view.css
@@ -24,6 +24,11 @@
   margin-top: 1em;
 }
 
+.btnUsers {
+  composes: btnTodos;
+  margin-left: 1em;
+}
+
 .title {
   composes: title from '../../styles/utilities.css';
 }
