Menus appear in more logical places

--- a/app/components/Sidebar/sidebar.css
+++ b/app/components/Sidebar/sidebar.css
@@ -59,6 +59,11 @@
   line-height: 2.1em;
 }
 
+.globalDashItem {
+  composes: item;
+  margin: 1em 0;
+}
+
 .divider {
   background-color: #ccc;
   height: 1px;
