--- a/app/routes/Users/profile.css
+++ b/app/routes/Users/profile.css
@@ -18,7 +18,17 @@
   composes: button from '../../styles/buttons.css';
   margin-top: .6em;
   margin-bottom: 3em;
-  width: 100%;
+}
+
+.btnAccept {
+  composes: buttonPrimary from '../../styles/buttons.css';
+  margin-top: .6em;
+  padding: 0.5em 1em;
+}
+
+.btnDecline {
+  composes: button from '../../styles/buttons.css';
+  margin: .6em 0 0em .5em;
 }
 
 .btnTodos {
@@ -41,4 +51,19 @@
 
 .wrapper {
   composes: wrapper from '../../styles/utilities.css';
+}
+
+.link {
+  text-decoration: none;
+  color: #777;
+}
+
+.link:hover {
+  color: #333;
+}
+
+.invite {
+  background-color: #f7f7f7;
+  padding: .5em;
+  margin: 1em 0;
 }
