a few more changes

--- a/app/routes/Teams/ManageUsers.css
+++ b/app/routes/Teams/ManageUsers.css
@@ -1,36 +1,13 @@
-.typeahead {
+.item {
   background-color: #f7f7f7;
-  border: 1px solid #ddd;
-}
-
-.input {
-  width: 100%;
-  padding: 0.5em 0.6em;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-shadow: inset 0 1px 3px #ddd;
-  border-radius: 4px;
-}
-
-.results {
-  margin: .5em;
   padding: .5em;
-}
-
-.listItem {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-}
-
-.listItem a {
-  text-decoration: none;
+  margin: 1em 0;
 }
 
 .btn {
   composes: button from '../../styles/buttons.css';
-  margin-top: .2em;
-  margin-bottom: 1em;
+  margin: .2em .4em .2em 0;
+  padding: .2em;
 }
 
 .subtitle {
