--- a/app/routes/Teams/view.css
+++ b/app/routes/Teams/view.css
@@ -20,10 +20,9 @@
 }
 
 .btnManage {
-  composes: btn;
-  margin-top: .2em;
-  margin-bottom: 1em;
-  margin-left: .5em;
+  composes: buttonPrimary from '../../styles/buttons.css';
+  margin: .2em 0 1em .5em;
+  padding: 0.5em 1em;
 }
 
 .btnTodos {
