--- a/app/routes/Users/list.css
+++ b/app/routes/Users/list.css
@@ -8,8 +8,16 @@
   composes: title from '../../styles/utilities.css';
 }
 
+.subtitle {
+  composes: subtitle from '../../styles/utilities.css';
+}
+
 .wrapper {
   composes: wrapper from '../../styles/utilities.css';
+}
+
+.btn {
+  composes: buttonPrimary from '../../styles/buttons.css';
 }
 
 .list {
