--- a/app/styles/utilities.css
+++ b/app/styles/utilities.css
@@ -7,6 +7,8 @@ of these elements. Can override things locally too. */
 
 .wrapper {
   padding: 4em 1em;
+  animation: open .5s 1;
+  animation-fill-mode: forwards;
 }
 
 .title {
@@ -17,4 +19,12 @@ of these elements. Can override things locally too. */
 .subtitle {
   margin-bottom: .6em;
   color: #999;
+}
+
+@keyframes open {
+  0% {
+    transform: translate3d(-100%,0,0);
+  } 100% {
+    transform: translate3d(0,0,0);
+  }
 }
