--- a/app/routes/Teams/create.css
+++ b/app/routes/Teams/create.css
@@ -1,16 +1,6 @@
-.grid {
-  lost-utility: clearfix;
-  max-width: 960px;
-}
-
-.column {
-  lost-column: 1/2;
-}
-
-@media all and (max-width: 40em) {
-  .column {
-    lost-waffle: 1;
-  }
+.card {
+  max-width: 23em;
+  margin-bottom: 2em;
 }
 
 .planShowing {
